[gd_scene load_steps=4 format=3 uid="uid://settings_menu_001"]

[ext_resource type="Script" path="res://scenes/ui/settings_menu.gd" id="1"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 28
font_color = Color(1, 0.85, 0.4, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_label"]
font_size = 16
font_color = Color(0.9, 0.9, 0.9, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
label_settings = SubResource("LabelSettings_title")
text = "SETTINGS"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="ResolutionRow" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/ResolutionRow"]
layout_mode = 2
size_flags_horizontal = 3
label_settings = SubResource("LabelSettings_label")
text = "Resolution"

[node name="OptionButton" type="OptionButton" parent="Panel/VBox/ResolutionRow"]
layout_mode = 2
custom_minimum_size = Vector2(220, 0)

[node name="MapSizeRow" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/MapSizeRow"]
layout_mode = 2
size_flags_horizontal = 3
label_settings = SubResource("LabelSettings_label")
text = "Map Size"

[node name="OptionButton" type="OptionButton" parent="Panel/VBox/MapSizeRow"]
layout_mode = 2
custom_minimum_size = Vector2(220, 0)

[node name="FullscreenRow" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/FullscreenRow"]
layout_mode = 2
size_flags_horizontal = 3
label_settings = SubResource("LabelSettings_label")
text = "Fullscreen"

[node name="CheckButton" type="CheckButton" parent="Panel/VBox/FullscreenRow"]
layout_mode = 2

[node name="EdgePanRow" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/EdgePanRow"]
layout_mode = 2
size_flags_horizontal = 3
label_settings = SubResource("LabelSettings_label")
text = "Edge Panning"

[node name="CheckButton" type="CheckButton" parent="Panel/VBox/EdgePanRow"]
layout_mode = 2

[node name="MinimapRow" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/MinimapRow"]
layout_mode = 2
size_flags_horizontal = 3
label_settings = SubResource("LabelSettings_label")
text = "Show Minimap"

[node name="CheckButton" type="CheckButton" parent="Panel/VBox/MinimapRow"]
layout_mode = 2

[node name="Separator2" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="BackBtn" type="Button" parent="Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
text = "Back"
